test/neg/e206-default-on-optional.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e206-test

document
  field foo
    scalar string default-val
